<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TableRow>
        <Button
            android:id="@+id/btn_all_clear"
            android:text="@string/all_clear"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_switch_sign"
            android:text="@string/switch_sign"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_percent"
            android:text="@string/percent"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_divide"
            android:text="@string/divide"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btn_seven"
            android:text="@string/seven"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_eight"
            android:text="@string/eight"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_nine"
            android:text="@string/nine"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_multiply"
            android:text="@string/multiply"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btn_four"
            android:text="@string/four"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_five"
            android:text="@string/five"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_six"
            android:text="@string/six"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_minus"
            android:text="@string/minus"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btn_one"
            android:text="@string/one"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_two"
            android:text="@string/two"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_three"
            android:text="@string/three"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_plus"
            android:text="@string/plus"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btn_zero"
            android:text="@string/zero"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_dot"
            android:text="@string/dot"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />

        <Button
            android:id="@+id/btn_equals"
            android:text="@string/equals"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/purple" />
    </TableRow>
</TableLayout>